# docassemble-VT813

./: MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/VT813/data/questions/: VTFinAffSelfEmplPart.yml  VT_813.yml
docassemble/VT813/data/templates/: VT_813A_addendum.docx  VT_813A_next_steps.docx  Vt_financial_form_813a_next_steps.docx
