[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.VT813"
version = "1.1"
description = "Financial Affidavit - Vermont - Form 813A"
readme = "README.md"
dependencies = [
    "docassemble.ALLinter @ git+https://github.com/SuffolkLITLab/docassemble-ALLinter.git@main",
]

[[project.authors]]
name = "Guided interview by Legal Services Vermont / VTCourtForms"
email = "ksurette@legalservicesvt.org"

[project.urls]
Homepage = "https://VTLawHelp.org/VTCourtForms"

[tool.setuptools.packages.find]
where = [
    ".",
]
